# qutils

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  FontManager.cpp  FontManager.h  QEventForwarder.cpp  QEventForwarder.h  qutils_global.h
